2009-01-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check fallback_splitsize is smaller than
	                        physmem_total().
	* server-src/taper-mem-port-source.c: Dont; check physmem_available.

2009-01-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/server_util.c: New get_pending_cmd function.
	* server-src/server_util.h: get_pending_cmd prototype.
	* server-src/driver.c: Send message to dumper in ABORT command.
	* server-src/driverio.c: Send message to dumper in ABORT command.
	* server-src/dumper.c: Check for ABORT cmd.
	* server-src/reporter.c: Don't log duplicate
	                         'Not enough holding disk space' error

2009-01-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix result_argv subscript.

2009-01-08  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Write to stderr.

2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c (tape_device_seek_file): Set is_eof to FALSE
	  after it is use.

2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Don't call changer_label() if a changer is not
	                      in use.

2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c: Set *result_argv to NULL on EOF.
	* server-src/taper-mem-port-source.c: Set an error if the memory can't
	  be allocated for the memory buffer.

2009-01-05  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/runtar.c: remove unnecessary check for existence of
	  CLIENT_LOGIN

2009-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Archive.swg, perl/Amanda/Device.swg,
	  perl/Amanda/Xfer.swg: Fix compiler warning.

2009-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* config/automake/scripts.am: Remove 'use lib' line before doing check.

2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: AM_INIT_AUTOMAKE(amanda, "2.6.1b2")